kubernetes/deploy/home/searxng/searxng/clusters/bastion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  labels:
    app.kubernetes.io/component: searxng
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/name: searxng
  namespace: searxng
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: searxng
      app.kubernetes.io/name: searxng
      app.kubernetes.io/instance: searxng
  template:
    metadata:
      labels: 
        app.kubernetes.io/component: searxng
        app.kubernetes.io/instance: searxng
        app.kubernetes.io/name: searxng
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext: 
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - env:
          - name: SEARXNG_BASE_URL
            value: https://search.tailnet-4d89.ts.net/
          - name: SEARXNG_REDIS_URL
            value: redis://valkey-primary.searxng.svc.cluster.local:6379
          - name: SEARXNG_URL
            value: https://search.tailnet-4d89.ts.net/
          - name: TZ
            value: America/Chicago
          image: docker.io/searxng/searxng:2026.10.9-f4822b3fc@sha256:85492ba800a861e3e8ff6014c430e81369fe6ca766a9990595f616d1ce95b272
          name: app
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe: &probe
            httpGet:
              path: /stats
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 10m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
              add:
              - CHOWN
              - SETGID
              - SETUID
              - DAC_OVERRIDE
            readOnlyRootFilesystem: false
          volumeMounts:
          - mountPath: /etc/searxng/settings.yml
            subPath: settings.yml
            readOnly: true
            name: config
          - mountPath: /etc/searxng/limiter.toml
            subPath: limiter.toml
            readOnly: true
            name: config
          - mountPath: /etc/searxng/favicons.toml
            subPath: favicons.toml
            readOnly: true
            name: config
          - mountPath: /etc/searxng
            name: cache
          - mountPath: /tmp
            name: tmp
      volumes: 
        - configMap:
            name: searxng
          name: config
        - emptyDir: {}
          name: cache
        - emptyDir: {}
          name: tmp
